2005-05-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* SerialPort.cs:
	* WinSerialStream.cs: Actually plug the Win serial stream
	in the SerialPort and use it if we are on Windows (use std
	stream otherwise).

2005-05-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* WinSerialStream.cs: Implement some bits needed for
	the backend thing.

2005-05-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ISerialStream.cs:
	* SerialPortStream.cs:
	* SerialPort.cs:
	* SerialSignal.cs:
	Some changes to make SerialPorStream implement ISerialInterface,
	and be able to have OS-depending backends.
	
2006-05-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ISerialStream.cs: New internal interface used for 
	accessing the backend streams functionality.

2006-04-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* WinSerialPort.cs: Inital import of the backend stream
	for Windows support.
	
2006-04-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* SerialPort.cs:
	* SerialPortStream.cs: Add signals managing.
	* SerialSignal.cs: New.
	
2006-04-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* SerialPort.cs: Add protected Dispose method, and move
	the Close stuff there.
	
2006-04-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* SerialPort.cs: Re-arrange values for ctors (keep things
	clean).
	
2006-04-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* SerialPort.cs:
	* SerialPortStream.cs: Remove the buffers from the SerialPort
	class, and take them to SerialPortStream. We need them for
	storing the internal read (pass the buffer sizes to SerialPortStream
	ctor by now, and use those numbers when we support them).
	
2006-03-27  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* SerialPort.cs: Inherit from Component, and use protected
	Events property to save the event handlers. Also add internal
	methods to trigger the events and remove pragmas.

2006-03-15  Miguel de Icaza  <miguel@gnome.org>
