@@ -1,3 +1,14 @@
+2005-05-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* ISerialStream.cs: Add support for break state.
+	* SerialPort.cs: Likewise.
+	* WinSerialStream.cs: Add support for break state and
+	some other bits (BytesToRead, BytesToWrite, DsrHolding,
+	CDHolding, CtsHolding, DiscardIn, DiscardOut).
+	* SerialPortStream.cs: Add a SetBreak function to
+	implement the updated ISerialStream interface (not implemented
+	by now).
+
 2005-05-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* SerialPort.cs:
